<resources>
    <string name="app_name">VOA NEWS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_published">Published Date:</string>
    <string name="author">Author:</string>
    <string name="internet_error">No Internet Connection</string>
    <string name="loading">Loading...</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="item_regions">Regions</string>
    <string name="item_others">Others</string>
    <string name="item_usa">Usa</string>
    <string name="item_africa">Africa</string>
    <string name="item_america">America</string>
    <string name="item_europe">Europe</string>
    <string name="item_asia">Asia</string>
    <string name="item_middle_east">Middle East</string>
    <string name="item_home">Home</string>
    <string name="item_profile">Profile</string>
    <string name="item_source">Source</string>
    <string name="no_internet_error">No Internet Connection</string>

    <string-array name="drawer_tabs">
        <item>Home</item>
        <item>Technology</item>
        <item>Sports</item>
        <item>Magazine</item>
    </string-array>
</resources>